--- a/babylon_robotarm/index.html
+++ b/babylon_robotarm/index.html
@@ -77,7 +77,7 @@
 
             setInterval(observe_ws_readyState, 1000)
             function observe_ws_readyState() {
-                if (ws.readyState == 3) {m6tfgvtfgcbgf67vgftc
+                if (ws.readyState == 3) {
                     ws = new WebSocket("ws://localhost:9001/ws");
                 }
             }
